tests/parsing/smtlib/poly/errors/063_declare-datatypes_bad_sort_dec_1.expected
File "tests/parsing/smtlib/poly/errors/063_declare-datatypes_bad_sort_dec_1.psmt2", line 2, character 20-21:
2 | (declare-datatypes (_))
                        ^
Error while parsing a datatypes declaration, read the reserved word '_',
      but expected a parametric sort declaration of the form "(symbol num)".
